<resources>
    <string name="app_name">超级服务HD</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="splash_content">服务，如影随形</string>

    <!--模块名称-->
    <string name="coming_notice">到店通知</string>
    <string name="message_notice">消息通知</string>
    <string name="deal_with_order">订单处理</string>
    <string name="call_service">呼叫通知</string>
    <string name="info_set">个人设置</string>

    <!-- 新增客户界面 -->
    <string name="name">姓名</string>
    <string name="phone">电话</string>
    <string name="company">公司</string>
    <string name="position">职位</string>
    <string name="member_on_account">挂账会员</string>
    <string name="confirm">确定</string>
    <string name="not_input_yet"> 尚未输入</string>
    <string name="finish">完成</string>
    <string name="choose">选取</string>
    <string name="my_clients">我的客人</string>
    <string name="my_member">会员</string>

    <string name="snackbar_shared_msg">Gordon Wong shared a note with you.</string>
    <string name="view">View</string>
    <string name="opendrawer">Open drawer</string>
    <string name="closedrawer">Close drawer</string>
    <string name="sheet_item_pressed">Item pressed</string>
    <string name="search">搜索</string>

    <!--到店通知-->
    <string name="talk_with_team">与团队对话</string>
    <string name="talk_with_client">与客户对话</string>
    <string name="accpet_task">接受任务</string>
    <string name="appoint_task">指派任务</string>
    <string name="latest_contact">最近联系</string>

    <string name="no_data">暂无数据</string>
    <string name="current_none">暂无</string>
    <string name="member_detail">会员信息</string>
    <string name="account_type">账号类型</string>
    <string name="debt_member">挂账会员</string>
    <string name="not_debt_member">非挂账会员</string>
    <string name="visit_history_record">到店记录</string>
    <string name="prefrence_info">偏好信息</string>
    <string name="privilege_info">特权信息</string>
    <string name="tag">标签</string>
    <string name="remark">备注</string>
    <string name="cancel">取消</string>
    <string name="save">保存</string>
    <string name="please_input_the_tag_you_want">请输入您需要添加的标签内容！</string>
    <string name="add_tag_successed">添加标签成功</string>
    <string name="add_tag_failed">添加标签失败</string>
    <string name="my_teams">我的团队</string>
    <string name="client_select">客户查询</string>
    <string name="please_input_the_phone_number">请输入手机号</string>
    <string name="member_bind">会员绑定</string>
    <string name="member_info">会员信息</string>
    <string name="member_type">客户类型</string>
    <string name="not_check_yet">尚未选择</string>
    <string name="exclusive_customer_service">专属客服</string>
    <string name="action_edit">编辑</string>
    <string name="action_checkout">收款中心</string>
    <string name="action_tian_jia">添加</string>
    <string name="action_finish">完成</string>
    <string name="action_next">下一步</string>
    <string name="action_add">添加</string>
    <string name="action_sure">确定</string>
    <string name="add_clients">添加客户</string>
    <string name="team_edit">团队编辑</string>
    <string name="change_department">更改部门</string>
    <string name="delete">删除</string>
    <string name="add_team_employee">添加成员</string>
    <string name="add_shop_employee_by_manual">手动新增员工</string>
    <string name="import_excel_data_in_batch">批量导入Excel文档</string>
    <string name="import_from_contacts">通讯录导入</string>
    <string name="grant_to_read_your_contacts">授权读取您的联系人</string>
    <string name="not_choose_emp_object_yet">尚未选择员工对象</string>
    <string name="offline">离线</string>
    <string name="online">在线</string>
    <string name="last_online_time">上一次在线时间</string>
    <string name="team">团队</string>
    <string name="client_detail">客户详情</string>

    <string name="add_chat_object">添加聊天对象</string>
    <string name="start_group_chat">发起群聊</string>
    <string name="transfer_chat_to_others">将会话转给队友</string>
    <string name="offline_to_this_chat">对该会话离线</string>
    <string name="finish_this_chat">结束会话</string>
    <string name="with">与 </string>
    <string name="chating"> 对话中</string>
    <string name="net_exception_please_try_it_later">网络异常， 请稍后再试</string>
    <string name="chat">对话</string>
    <string name="latest">最近</string>
    <string name="not_choose_yet">尚未选择</string>
    <string name="user">用户</string>
    <string name="use_your_invite_code_and_add_you_as_exclusive_server_success">成功使用你的邀请码, 并添加你为专属客服</string>
    <string name="use_your_invite_code">成功使用你的邀请码</string>

    <!--音频通话和语音通话-->
    <string name="call_duration">通话时长</string>
    <string name="Refused">已拒绝</string>
    <string name="The_other_party_has_refused_to">对方已拒绝</string>
    <string name="The_other_is_not_online">对方不在线</string>
    <string name="The_other_is_on_the_phone">对方正在通话中</string>
    <string name="The_other_party_did_not_answer">对方未接听</string>
    <string name="did_not_answer">未接听</string>
    <string name="Has_been_cancelled">已取消</string>
    <string name="mute">静音</string>
    <string name="Hands_free">免提</string>
    <string name="hang_up">挂断</string>
    <string name="answer">接听</string>
    <string name="Are_connected_to_each_other">正在连接对方...</string>
    <string name="Is_not_yet_connected_to_the_server">尚未连接至服务器</string>
    <string name="have_connected_with">已经和对方建立连接，等待对方接受...</string>
    <string name="direct_call">Direct</string>
    <string name="relay_call">Relay</string>
    <string name="In_the_call">通话中...</string>
    <string name="The_other_party_refused_to_accept">对方拒绝接受！...</string>
    <string name="Connection_failure">连接建立失败！...</string>
    <string name="The_other_party_is_not_online">对方不在线，请稍后再拨...</string>
    <string name="The_other_is_on_the_phone_please">对方正在通话中，请稍后再拨</string>
    <string name="The_other_is_hang_up">对方已经挂断</string>
    <string name="The_other_party_did_not_answer_new">对方未接听</string>
    <string name="hanging_up">正在挂断..</string>
    <string name="not_connect_to_server">尚未连接至服务器，请稍后重试</string>
    <string name="order_new">新建订单</string>
    <string name="my_orders">我的订单</string>
    <string name="order_person">预订人</string>
    <string name="please_add_the_order_person">请添加预订人</string>
    <string name="exit">退出</string>
    <string name="confirm_exit_the_current_account">确定退出该账户？</string>
    <string name="add_order_person">添加预订人</string>
    <string name="add_client">添加客户</string>
    <string name="choose_room_type">选择房型</string>
    <string name="room_number">房间数量</string>
    <string name="zero">0</string>
    <string name="arrive_and_leave_date">入住/离店日期</string>
    <string name="live_person">入住人</string>
    <string name="please_add_the_live_person">请添加入住人</string>
    <string name="edit_line_person">编辑入住人</string>
    <string name="complete">完成</string>
    <string name="please_input_the_name">请输入姓名</string>
    <string name="please_input_the_live_person">请填写入住人</string>
    <string name="send_to_employee">发送给同事</string>
    <string name="choose_invoice">选择发票</string>
    <string name="pay_method">支付方式</string>
    <string name="please_choose_the_pay_method">请选择支付方式</string>
    <string name="choose_pay_method">选择支付方式</string>
    <string name="please_input_payment_unit_yuan"> 请输入房间价格 (单位：元)</string>
    <string name="please_choose_the_pay_method_and_room_amount">请选择支付方式并输入金额</string>
    <string name="yuan">元</string>
    <string name="invite_code">邀请码</string>
    <string name="used">已使用</string>
    <string name="unused">未使用</string>
    <string name="slash">/</string>
    <string name="send_by_wechat">微信发送</string>
    <string name="client">客户</string>
    <string name="confirm_to_create_new_invite_code">确定生成新的邀请码</string>
    <string name="no_more_data">已无更多数据！</string>
    <string name="send_by_sms">短信</string>
    <string name="share_invite_code"> 全国有超过百家顶级商户和1000+名人工客服将竭诚为您服务。</string>
    <string name="your_invite_code">您的邀请码为:</string>
    <string name="download_link">下载链接：</string>
    <string name="add_to_my_client">添加到我的客户</string>
    <string name="client_already_be_added">客人已被添加</string>
    <string name="select_client_failed_try_it_later">查询客户失败，请稍后再试！</string>
    <string name="please_use_invite_code_to_add_the_client">请通过激活码方式进行添加!</string>
    <string name="location">区域</string>
    <string name="arrive">到达</string>
    <string name="mail">邮箱</string>
    <string name="user_level">等级</string>
    <string name="accumulate_points">积分</string>
    <string name="sir">先生</string>
    <string name="miss">女士</string>

    <string name="no_search_result">对不起，无搜索结果</string>
    <string name="no_record_result">暂无收款记录</string>
    <string name="no_result">未找到用户</string>

    <!--ListView加载-->
    <string name="refresh_after_release">松开立即刷新</string>
    <string name="pull_down_refresh">下拉刷新</string>
    <string name="loading_more_data">正在加载更多数据</string>
    <string name="pull_up_load_more_data">上拉加载更多</string>
    <string name="latest_update">最后更新</string>
    <string name="refreshing_now">正在刷新中</string>

    <!--客人profile页-->
    <string name="profile_tab_label">喜好标签</string>
    <string name="profile_tab_arriving">到店记录</string>
    <string name="profile_tab_payment">消费记录</string>

    <string name="profile_payment_mount">结算金额</string>
    <string name="add_successed">添加成功</string>
    <string name="add_failed">添加标签失败</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
