<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@android:color/darker_gray"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <TextView
        android:layout_width="match_parent"
        android:gravity="center"
        android:text="TITLE"
        android:textColor="@android:color/white"
        android:background="@android:color/holo_blue_light"
        android:layout_height="50dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:padding="24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.zkjinshi.superservice.view.CircleImageView
                    android:id="@+id/civ_client_avatar"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:scaleType="center"
                    android:background="@drawable/photo_bg_selector"
                    />
            </RelativeLayout>

            <LinearLayout
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:orientation="vertical"
                android:focusableInTouchMode="true"
                android:singleLine="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                
                <EditText
                    android:padding="10dp"
                    android:id="@+id/et_client_name"
                    android:layout_width="match_parent"
                    android:textColor="@android:color/black"
                    android:inputType="text"
                    android:focusable="true"
                    android:hint="@string/name"
                    android:layout_height="50dp" />
                <EditText
                    android:padding="10dp"
                    android:id="@+id/et_client_phone"
                    android:layout_width="match_parent"
                    android:textColor="@android:color/black"
                    android:inputType="phone"
                    android:singleLine="true"
                    android:hint="@string/phone"
                    android:layout_height="50dp" />
                <EditText
                    android:padding="10dp"
                    android:id="@+id/et_client_company"
                    android:layout_width="match_parent"
                    android:textColor="@android:color/black"
                    android:inputType="text"
                    android:singleLine="true"
                    android:hint="@string/company"
                    android:layout_height="50dp" />

                <EditText
                    android:padding="10dp"
                    android:id="@+id/et_client_position"
                    android:layout_width="match_parent"
                    android:textColor="@android:color/black"
                    android:inputType="text"
                    android:singleLine="true"
                    android:hint="@string/position"
                    android:layout_height="50dp" />

            </LinearLayout>

            <CheckBox
                android:layout_marginTop="20dp"
                android:padding="10dp"
                android:id="@+id/cb_member_on_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/member_on_account"
                android:layout_gravity="center_horizontal" />

            <Button
                android:id="@+id/btn_confirm"
                android:layout_width="match_parent"
                android:text="@string/confirm"
                android:textColor="@android:color/white"
                android:background="@android:color/holo_blue_light"
                android:layout_marginTop="20dp"
                android:layout_marginRight="40dp"
                android:layout_marginLeft="40dp"
                android:layout_height="50dp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>