<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:ignore="ContentDescription" >

    <include
        android:id="@+id/head_bar_layout"
        layout="@layout/header_bar" />

    <LinearLayout
        android:padding="40dp"
        android:orientation="vertical"
        android:focusableInTouchMode="true"
        android:focusable="true"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp">

        <TextView
            android:padding="10dp"
            android:id="@+id/tv_payment_amount"
            android:layout_width="match_parent"
            android:textColor="@android:color/black"
            android:hint="@string/profile_payment_mount"
            android:layout_height="wrap_content" />

        <EditText
            android:padding="10dp"
            android:id="@+id/et_payment_amount"
            android:layout_width="match_parent"
            android:textColor="@android:color/black"
            android:inputType="numberDecimal"
            android:focusable="true"
            android:hint="0.00"
            android:maxLength="8"
            android:layout_height="50dp" />

        <TextView
            android:paddingTop="20dp"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:id="@+id/tv_payment_remark"
            android:layout_width="match_parent"
            android:textColor="@android:color/black"
            android:hint="@string/remark"
            android:layout_height="wrap_content" />

        <EditText
            android:padding="10dp"
            android:id="@+id/et_payment_remark"
            android:layout_width="match_parent"
            android:textColor="@android:color/black"
            android:maxLength="6"
            android:inputType="text"
            android:singleLine="true"
            android:hint="消费信息备注(字数不超过6字)"
            android:layout_height="50dp" />

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="match_parent"
            android:text="@string/confirm"
            android:textColor="@android:color/white"
            android:background="@android:color/holo_blue_light"
            android:layout_marginTop="20dp"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:layout_height="50dp" />

    </LinearLayout>

</LinearLayout>