<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/id_switch_tab_11"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_unused_invite_code"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/tv_unused_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unused"
                android:textColor="@color/TextColorBlack"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/slash"
                android:textColor="@color/TextColorBlack"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_unused_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="@color/TextColorBlack"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_used_invite_code"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/tv_used_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/used"
                android:textColor="@color/TextColorBlack"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/slash"
                android:textColor="@color/TextColorBlack"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_used_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="@color/TextColorBlack"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/iv_tab_line"
        android:layout_width="wrap_content"
        android:layout_height="4dp"
        android:background="@color/theme_primary"
        android:contentDescription="tab" />

    <View style="@style/GrayLineBorder"></View>

</LinearLayout>